--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html"><img src="images/mumimg.jpg" alt="Smiley face" width="100%" height="160"></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html"><img style="border:5px solid lightgrey; border-radius: 100%;" src="images/mumimg.jpg" alt="Smiley face" width="100%" height="160"></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
@@ -76,7 +76,7 @@
 			<aside id="colorlib-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_1.jpg);">
+				   	<li style="background-image: url(images/work-7.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -86,13 +86,13 @@
 						   					<h1>Web Development</h1>
 						   					<h2>For web development contact with <a href="contact.html" target="_blank">A.A.Mamun</a></h2>
 												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-											</div>
+										</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
+				   	<li style="background-image: url(images/work-2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -102,13 +102,13 @@
 						   					<h1>Web Design</h1>
 											   <h2>For web design contact with <a href="contact.html" target="_blank">A.A.Mamun</a></h2>
 												<p><a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-											</div>
+										</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-					   <li style="background-image: url(images/img_bg_2.jpg);">
+					   <li style="background-image: url(images/comp4.png);">
 						<div class="overlay"></div>
 						<div class="container-fluid">
 							<div class="row">
