--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,10 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html"><img style="border:5px solid lightgrey; border-radius: 100%;" src="images/mumimg.jpg" alt="Smiley face" width="100%" height="160"></a></h1>			<nav id="colorlib-main-menu" role="navigation">
+			<h1 id="colorlib-logo"><a href="index.html"><img style="border:5px solid lightgrey; border-radius: 100%;" src="images/mumimg.jpg" alt="Smiley face" width="100%" height="160"></a></h1>			
+			<label style="margin-bottom: 2.5em;">ABDULLAH AL MAMUN</label>
+			<nav id="colorlib-main-menu" role="navigation">
+			
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="work.html">Work</a></li>
