--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<h1 id="colorlib-logo"><a href="index.html"><img style="border:5px solid lightgrey; border-radius: 100%;" src="images/mumimg.jpg" alt="Smiley face" width="100%" height="160"></a></h1>
+			<label style="margin-bottom: 2.5em;">ABDULLAH AL MAMUN</label>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
